--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "langchain-core>=0.3.77",
     "langchain-openai>=0.3.34",
     "langchain-text-splitters>=0.3.11",
-    "langgraph>=0.6.8",
+    "langgraph[graphviz]>=0.6.8",
     "openai>=2.0.1",
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.0.0",
