feat : added Human in the loop for sql validation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,14 @@ dependencies = [
     "chromadb>=1.1.1",
     "cryptography>=46.0.2",
     "fastapi[all]>=0.100.0",
+    "grandalf>=0.8",
     "ipython>=9.6.0",
     "langchain>=0.3.27",
     "langchain-community>=0.3.30",
     "langchain-core>=0.3.77",
     "langchain-openai>=0.3.34",
     "langchain-text-splitters>=0.3.11",
-    "langgraph[graphviz]>=0.6.8",
+    "langgraph>=0.6.8",
     "openai>=2.0.1",
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.0.0",
