--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.13"
 dependencies = [
     "chromadb>=1.1.1",
     "cryptography>=46.0.2",
+    "faiss-cpu>=1.13.0",
     "fastapi[all]>=0.100.0",
     "grandalf>=0.8",
     "ipython>=9.6.0",
@@ -23,6 +24,7 @@ dependencies = [
     "pymysql>=1.1.2",
     "pypdf>=6.1.1",
     "python-dotenv>=1.1.1",
+    "sentence-transformers>=5.1.2",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.37.0",
 ]
